--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     padding: 0;
     margin: 0;
     background-color: #f7f6f6;
+    
 }
 .bold{
     font-weight: bold;
@@ -28,26 +29,80 @@ body{
     background-image: url(img/lines.png);
     background-repeat: no-repeat;
     background-position: top;
-    width: 70%;
-    height: 100%;
+    background-size: cover;
+    border-radius: 100px;
+
+    width: 30%;
+    height: 40%;
     position: absolute;
     top: -40px;
-    right: 490px;
+    right: 970px;
     border-radius: 100px;
     
 }
 .menrow{
-    position: relative;
-    top: -260px;
-    right: 5% !important;
+    position: absolute;
+    bottom: -150px;
+    right: 4% !important;
 
 }
 .menrow-sm{
  display: none;
 }
 
+.men-1-row{
+    position: relative;
+}
+
+.Recent{
+    margin-top: 180px !important;
+}
+.readmore{
+    text-decoration: underline;
+}
+.storyinp{
+    width: 32% !important;
+    
+}
+.storyinp input{
+    border: none;
+    outline: none;
+}
+.storyinp button{
+    border: 1px solid white;
+}
+
+.story{
+    position: relative;
+    
+}
+
+.storybg{
+   left: -130px !important;
+}
+.ftul li{
+        list-style: none;
+        
+}
+.ftul ul{
+    padding-left: 0px !important;
+    width: 25%;
+}
 
 
+.ft-plat-icon{
+    width: 40px;
+    height: 40px;
+    background-color: #7C4EE4;
+}
+
+.ft-plat-icon-main{
+    width: 25% ;
+}
+.ft-line{
+    height: 3px;
+    background-color: #999999;
+}
 
 
 
@@ -77,9 +132,22 @@ body{
     .bgimg{
         display: none;
     }
+    .storyinp{
+    width: 38% !important;
+    }
     
-
 }
+
+@media only screen and (max-width: 992px){
+  .storyinp{
+    width: 50% !important;
+    }
+    .ftul ul{
+        width: 39% !important;
+    }
+}
+
+
 
 @media only screen and (max-width: 768px){
     .menrow-sm{
@@ -91,5 +159,28 @@ body{
     }
     .men-2-row{
         display: none;
+    }
+
+    .Recent{
+        margin-top: 30px !important;
+        margin-bottom: 30px !important;
+    }
+    .storyinp{
+    width: 70% !important;
+    }
+    .ftul ul{
+        width: 49% !important;
+    }
+    .ft-plat-icon-main{
+    width: 40% ;
+}
+}
+
+@media only screen and (max-width: 558px){
+      .storyinp{
+    width: 74% !important;
+    }
+    .ftul ul{
+        width: 59% !important;
     }
 }
